--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,33 +1,10 @@
+html,
 body {
-  padding: 100px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
-body .users-column {
-  display: inline-block;
-  margin-right: 2em;
-  vertical-align: top;
-}
-
-body .users-column .column-header {
-  padding-bottom: 5px;
-  font-weight: 700;
-  font-size: 1.2em;
-}
-
-body .add-user-col input {
-  margin-bottom: 10px;
-}
-
-body .users-column .user-display-ele {
-  padding-bottom: 10px;
-}
-
-body .users-column .user-display-ele button {
-  margin-top: 2px;
-  margin-bottom: 10px;
-}
-
-body .users-column .user-display-ele .edit-view {
-  display: none;
+#window {
+    width: 100vw;
+    height: 100vw;
 }
