Made the navbar a component

--- a/src/views/landing.pug
+++ b/src/views/landing.pug
@@ -11,7 +11,7 @@ html(lang='en-US')
                         | Create a stunning resume in less than 2 minutes!
             .row.pl-4.pt-4
                 .col-6.pl-4.pt-4
-                    a.btn.btn-dark.btn-lg.p-4.rounded-pill(href='/app/resumeinfo') Get Started
+                    a.btn.btn-dark.btn-lg.p-4.rounded-pill(href='/app/account') Get Started
             .row(style='position:fixed;bottom:0;z-index:-1')
                 .col
                 .col-7
