--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -1,4 +1,5 @@
-include components/dashboard-components
+include components/dashboard/work-experience
+include components/dashboard/education
 
 doctype html
 
@@ -8,6 +9,7 @@ html(lang='en-US')
     body
         include components/navbar
         +add-work-experience-modal
+        +add-education-modal
         .container.mt-4
             .row
                 .col-12.col-md-6
@@ -18,6 +20,6 @@ html(lang='en-US')
                 .col-12.col-md-6
                     +work-experience-card(workExperience)
                 .col-12.col-md-6
-                    +education-card(education)
+                    +education-card(educationHistory)
 
         include components/scripts
