--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -10,6 +10,10 @@ html(lang='en-US')
         include components/navbar
         +add-work-experience-modal
         +add-education-modal
+        each job, index in workExperience
+            +edit-work-experience-modal(job, index)
+        //- each education in educationHistory
+        //-     +edit-education-modal(job)
         .container.mt-4
             .row
                 .col-12.col-md-6
