+ Edit/Add education

--- a/src/views/components/dashboard/education.pug
+++ b/src/views/components/dashboard/education.pug
@@ -6,9 +6,14 @@ mixin education-card(educationHistory)
                 +education-item(education)
             button.btn.btn-primary.btn-block(data-toggle='modal' data-target='#add-education-modal') Add Education
 
-mixin education-item(education)
+mixin education-item(edu)
     .alert.alert-success
-        .btn= `${education.institution}, Class of ${education.end.split("/")[2]}`
+        .row
+            .col-12.col-md-8
+                .btn= `${edu.institution}, Class of ${edu.end.split("/")[2]}`
+            .col-12.col-md-4.text-center.text-md-right
+                button.btn.btn-light(data-toggle='modal' data-target=`#edit-education-modal-${edu._id}`)
+                    ion-icon(name='create-outline')
 
 mixin add-education-modal
     #add-education-modal.modal.fade(tabindex='1')
@@ -39,6 +44,42 @@ mixin add-education-modal
                         .row
                             .col-12 Description
                                 textarea.form-control.mb-2(name='description')
+                    .modal-footer
+                        button.btn.btn-secondary(
+                            type='button'
+                            data-dismiss='modal') Close
+                        button.btn.btn-primary(type='submit') Save
+
+mixin edit-education-modal(edu)
+    .modal.fade(tabindex='1' id=`edit-education-modal-${edu._id}`)
+        .modal-dialog
+            .modal-content
+                form(action='/app/education/add' method='POST')
+                    .modal-header
+                        h5.modal-title Add Education
+                        button.close(type='button' data-dismiss='modal')
+                            span &times;
+                    .modal-body
+                        input(name='_id' value=edu._id hidden)
+                        .row
+                            .col-12 Level
+                                input.form-control.mb-2(name='level' value=edu.level placeholder='Undergraduate')
+                        .row
+                            .col-12 Insitution
+                                input.form-control.mb-2(name='institution' value=edu.institution placeholder='Temple University')
+                        .row
+                            .col-12.col-md-6 Start
+                                input.form-control.mb-2(name='start-date' value=edu.start placeholder='mm/dd/yyyy')
+                            .col-12.col-md-6 End
+                                input.form-control.mb-2(name='end-date' value=edu.end placeholder='mm/dd/yyyy')
+                        .row
+                            .col-12.col-md-8 Degree/Program
+                                input.form-control.mb-2(name='degree' value=edu.degree placeholder='B.Sc. Computer Science')
+                            .col-12.col-md-4 GPA
+                                input.form-control.mb-2(type='number' value=edu.gpa step='0.1' name='gpa' placeholder='GPA')
+                        .row
+                            .col-12 Description
+                                textarea.form-control.mb-2(name='description')= edu.description
                     .modal-footer
                         button.btn.btn-secondary(
                             type='button'
