--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -12,8 +12,8 @@ html(lang='en-US')
         +add-education-modal
         each job, index in workExperience
             +edit-work-experience-modal(job, index)
-        //- each education in educationHistory
-        //-     +edit-education-modal(job)
+        each education in educationHistory
+            +edit-education-modal(education)
         .container.mt-4
             .row
                 .col-12.col-md-6
