--- a/src/views/components/dashboard/education.pug
+++ b/src/views/components/dashboard/education.pug
@@ -1,5 +1,5 @@
 mixin education-card(educationHistory)
-    .card.w-100
+    .card.w-100.mb-4
         .card-body
             h4.card-title Education
             each education in educationHistory
