--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -1,5 +1,6 @@
 include components/dashboard/work-experience
 include components/dashboard/education
+include components/dashboard/personal-info
 
 doctype html
 
@@ -24,6 +25,7 @@ html(lang='en-US')
             .row
                 .col-12.col-md-6
                     +work-experience-card(workExperience)
+                    +personal-info-card(account)
                 .col-12.col-md-6
                     +education-card(educationHistory)
 
