--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -19,6 +19,8 @@ html(lang='en-US')
             +edit-work-experience-modal(job, index)
         each education in educationHistory
             +edit-education-modal(education)
+        each skill in skillset
+            +edit-skill-modal(skill)
         
         .container.mt-4
             .row
